--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=pass@pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
